# FINSIG

./: INDEX_GUIDE.md  INDEX_GUIDE_EN.md  INDEX_GUIDE_ES.md  MODULE_GUIDE.md  README.md  README_EN.md  README_ES.md  pitch_deck_en.md  pitch_deck_es.md  pitch_deck_fr.md
.github/: MODULE_GUIDE_EN.md  MODULE_GUIDE_ES.md  MODULE_GUIDE_FR.md  bitacora_workflows_fr.md
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  monitoring.yml  test-pipeline.yml  test-scripts.yml  typing.yml
MODULE_AI/: SOUS_MODULE_GUIDE.md
MODULE_AI/ai-agentic/: SOUS-MODULE_GUIDE.md  SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md
MODULE_AI/ai-ethics/: SOUS_MODEL_GUIDE.md  SUB_MODULE_GUIDE.EN.MD  SUB_MODUL_GUIDE_ES.md
MODULE_AI_ETHICS/: SOUS_MODULE_GUIDE.md
MODULE_RESEARCH/quantum/: SOUS_MODULE_GUIDE.md  SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md
MODULE_RESEARCH/sciences/: MODULE_GUIDE.md  SOUS_MODULE_GUIDE.md  SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md
MODULE_RESEARCH/simulation/: SOUS_MODULE_GUIDE.md  SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md
artefacts/: SUB-MODULE_GUIDE_FR.md  SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md
compliance/: SOUS_MODULE_GUIDE.EN.md  SOUS_MODULE_GUIDE_FR.md  SUB_MODULE_GUIDE_ES.md
core/architecture/: README_TECHNIQUE_ES.md  README_TECHNIQUE_FR.md  README_TEQUNIQUE_EN.md  SOUS_MODULE_GUIDE.md  SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md  bitacora_architecture_en.md  bitacora_architecture_es.md  bitacora_architecture_fr.md
docs/: BITACORA.md  MODULE_GUIDE.md  MODULE_GUIDE_EN.md  MODULE_GUIDE_ES.md
docs-core/audit/: SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md  SUB_MODULE_GUIDE_FR.md
docs-core/core/: SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md  SUB_MODULE_GUIDE_FR.md
docs-core/data/: SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md  SUB_MODULE_GUIDE_FR.md
docs-core/governance/: SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md  SUB_MODULE_GUIDE_FR.md
docs-core/reports/: SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md  SUB_MODULE_GUIDE_FR.md
docs-disciplinary/: SUB_MODULE_GUIDE_FR.md
docs-disciplinary/domains/: SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_ES.md  SUB_MODULE_GUIDE_FR.md
docs-disciplinary/gates/: SUB_MODULE_GUIDE_EN.md  (+2 more)
infra-config/: SUB_MODULE_GUIDE.ES.md  SUB_MODULE_GUIDE_EN.md  SUB_MODULE_GUIDE_FR.md
infra-config/sub-module/: makefile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
infra-monitoring/: SUB_MODULE_GUIDE.EN.md  SUB_MODULE_GUIDE_ES.md
infra_technical/ci-cd/configs/: mypy.ini  pyproject.toml  pytest.ini  requirements.txt
security-compliance/: guide_en.md  guide_es.md  guide_fr.md
sync-engine/: guide_en.md  guide_es.md  guide_fr.md
tests/: bitacora_en.md  bitacora_es.md  bitacora_fr.md  guide_en.md  guide_es.md  guide_fr.md  readme_technique_fr.md
(+115 files in other folders)
