# Pyproject configuration for FINSIG CI/CD
# Objectif : définir les dépendances et standards institutionnels
# afin d'assurer robustesse, reproductibilité et auditabilité.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsig-ci-cd"
version = "0.1.0"
description = "CI/CD workflows and utilities for FINSIG"
authors = [
    { name = "ITCAA – FINSIG", email = "contact@finsig.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "docker>=6.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "prometheus-client>=0.16",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=ci_cd --cov-report=xml:reports/coverage.xml --junitxml=reports/junit/test-results.xml"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
exclude = ["build", "dist", ".venv"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.bandit]
skips = ["B101"]  # Exemple : ignorer assert usage
